Rmove ! important não esperado, nos arquivos de estilização do ExpenseForm e Header

--- a/src/components/ExpensesComponents/ExpenseForm.css
+++ b/src/components/ExpensesComponents/ExpenseForm.css
@@ -30,7 +30,7 @@ select {
 }
 
 .div-alinhar-verticalmente {
-  align-items: center ! important;
+  align-items: center;
   display: flex;
   justify-content: center;
 }
