--- a/src/components/ExpensesComponents/ExpenseForm.css
+++ b/src/components/ExpensesComponents/ExpenseForm.css
@@ -1,6 +1,6 @@
 form {
   align-items: center;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: white;
   display: flex;
   flex-wrap: wrap;
@@ -14,8 +14,8 @@ select {
 }
 
 h1 {
-  text-align: center;
   margin: 0;
+  text-align: center;
 }
 
 .label {
@@ -48,11 +48,11 @@ h1 {
 
 .container-header-left {
   display: flex;
-  gap: 5px
+  gap: 5px;
 }
 
 .total-field {
   font-size: 20px;
-  font-weight: bolder;
+  font-weight: 700;
   margin: 0;
 }
