--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,11 +1,11 @@
 button {
   align-items: center;
   background-color: rgb(62, 163, 124);
-  border-radius: 10px;
   border: none;
-  color: #fff;
+  border-radius: 10px;
+  color: white;
   display: flex;
-  font-family: Montserrat-SemiBold;
+  font-family: 'Montserrat-SemiBold', sans-serif;
   font-size: 20px;
   height: 60px;
   justify-content: center;
@@ -13,7 +13,6 @@ button {
   margin: 0;
   padding: 0 20px;
   position: relative;
-  transition: all .4s;
   width: 100%;
   z-index: 1;
 }
@@ -39,11 +38,11 @@ button:disabled {
 }
 
 .login-h1 {
-  font-family: Montserrat-SemiBold;
+  font-family: 'Montserrat-SemiBold', sans-serif;
 }
 
 .container-login {
-  background: #fff;
+  background: white;
   border-radius: 10px;
   box-sizing: border-box;
   color: #212529;
@@ -51,16 +50,13 @@ button:disabled {
   font-weight: 400;
   line-height: 1.5;
   margin: 0;
-  padding-bottom: 33px;
-  padding-left: 110px;
-  padding-right: 110px;
-  padding-top: 62px;
+  padding: 62px 110px  33px 110px;
   position: relative;
   width: 600px;
 }
 
 .login-form {
-  background-color: #fff;
+  background-color: white;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
@@ -100,14 +96,11 @@ button:disabled {
 }
 
 .txt1 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
   color: #555;
-  font-family: Montserrat-SemiBold;
+  font-family: 'Montserrat-SemiBold', sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: 1.5;
   margin: 0;
   padding: 0;
 }
