--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -5,7 +5,6 @@ button {
   border-radius: 10px;
   color: white;
   display: flex;
-  font-family: 'Montserrat-SemiBold', sans-serif;
   font-size: 20px;
   height: 60px;
   justify-content: center;
@@ -37,10 +36,6 @@ button:disabled {
   width: 100%;
 }
 
-.login-h1 {
-  font-family: 'Montserrat-SemiBold', sans-serif;
-}
-
 .container-login {
   background: white;
   border-radius: 10px;
@@ -50,7 +45,7 @@ button:disabled {
   font-weight: 400;
   line-height: 1.5;
   margin: 0;
-  padding: 62px 110px  33px 110px;
+  padding: 62px 110px 33px;
   position: relative;
   width: 600px;
 }
@@ -68,7 +63,7 @@ button:disabled {
 
 .div-input {
   color: #212529;
-  font-size: 20px ! important;
+  font-size: 20px;
   margin: 0;
   padding: 0;
 }
@@ -98,7 +93,6 @@ button:disabled {
 .txt1 {
   box-sizing: border-box;
   color: #555;
-  font-family: 'Montserrat-SemiBold', sans-serif;
   font-size: 20px;
   font-weight: 400;
   margin: 0;
